--- a/CRM.AppWebMVC/Views/Customer/Index.cshtml
+++ b/CRM.AppWebMVC/Views/Customer/Index.cshtml
@@ -8,7 +8,7 @@
 <partial name="SearchQuery" model="modelSearchQuery" />
 <partial name="SearchResult" model="Model.Data" />
 
-<h1>Index</h1>
+<h1>inicio</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
